objects/Account.object
<CustomObject>
    <fields>
        <fullName>Choir_Rehearsal_Information__c</fullName>
        <description>This field contains information about a choir&apos;s rehearsal, e.g., when and where they rehearse. VSA uses this information because they sometimes visit the choir before they perform at an event (VSA-36).</description>
        <label>Choir Rehearsal Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field contains the organisation&apos;s email address, typically an &quot;info@companyname.com&quot;-type email.</description>
        <inlineHelpText>The organisation&apos;s email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grant_Deadlines__c</fullName>
        <description>This field holds information about a grant-making organisation&apos;s grant application deadlines throughout the year (VSA-14).</description>
        <inlineHelpText>Dates throughout the year when funding applications are due.</inlineHelpText>
        <label>Grant Deadlines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Grant_Ask__c</fullName>
        <description>This field is used by the VSA grant application program, and holds information about the potential amounts which this organisation is likely to fund (VSA-14).</description>
        <inlineHelpText>Potential amounts that this organisation are likely to fund.</inlineHelpText>
        <label>Potential Grant Ask</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Previous Level field for use with new Level feature. May be edited or deleted as needed.</description>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households (Previous Level)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scottish_Charity_Number__c</fullName>
        <description>Field primarily for Trust and Foundations</description>
        <inlineHelpText>Enter a Scottish Charity Number if applicable, into this field. This is principally for trust/foundation type accounts.</inlineHelpText>
        <label>Scottish Charity Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Soft_Credit_Total__c</fullName>
        <description>Field for rolling up Account Soft Credits to.</description>
        <inlineHelpText>Field should show the current roll up of all Soft Credits for this account.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Song_Choices__c</fullName>
        <description>This field contains a description of the various songs in the choir&apos;s repertoire (VSA-36).</description>
        <label>Song Choices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <description>This field returns TODAY&apos;S DATE. It is used as input for Today_Date_as_Text, which in turn is used in a mail merge document template to stamp the document with today&apos;s date (VSA-29).</description>
        <formula>TODAY()</formula>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today_Date_as_Text__c</fullName>
        <description>This field returns TODAY&apos;S DATE in a text format. It is used in a mail merge template (VSA-29).</description>
        <formula>IF( 
ISBLANK( Today_Date__c ), 
NULL, 
( 
TEXT(DAY( Today_Date__c ))&amp; 
CASE( 
DAY( Today_Date__c ), 
1, &apos;st&apos;, 
2, &apos;nd&apos;, 
3, &apos;rd&apos;, 
21,&apos;st&apos;, 
22,&apos;nd&apos;, 
23,&apos;rd&apos;, 
31,&apos;st&apos;, 
&apos;th&apos; 

)&amp;&apos; &apos;&amp; 
CASE( 
MONTH( Today_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot; 
)&amp;&apos; &apos;&amp; 
TEXT(YEAR( Today_Date__c )) 
) 
)</formula>
        <label>Today&apos;s Date as Text</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>